# advanced-cg

./: .gitignore  .travis.yml  ReadMe.md
cpp/corona/: Color.cpp  Color.h  Corona.cpp  Diffraction.h  HSV.cpp  HSV.h  Makefile  Sampler.cpp  Sampler.h  refractive_index.h
cpp/path_tracing/: Makefile  PathTracing.cpp  ReadMe.md  SceneObject.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleMeshLoader.cpp  Trigonometrical.h
cpp/path_tracing/meshes/: Cuboid.trim  Walls.trim
cpp/radiosity/: Makefile  PatchTriangle.h  Radiosity.cpp  SimpleTriangle.cpp  SimpleTriangle.h  Triangle.cpp
cpp/radiosity/include/: macro.h
cpp/radiosity/test/: Triangle.test.cpp  Vector.test.cpp  main.cpp
cpp/shared/: Image.cpp  Ray.cpp  Ray.h  Sampler.cpp  Sampler.h  SceneObject.h  Triangle.cpp  Triangle.h  TriangleMeshLoader.cpp  TriangleMeshLoader.h  Vector.cpp  Vector.h  macro.h
path_tracing/: Makefile  PathTracing.cpp  Sphere.cpp  Sphere.h
radiosity/: ColorUtils.cpp  ColorUtils.h  Image.cpp  Image.h  Makefile  PatchTriangle.h  Radiosity.cpp  Ray.h  Rectangle.cpp  Rectangle.h  SImpleTriangle.cpp  Shape.cpp  Shape.h  SimpleTriangle.cpp  SimpleTriangle.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h
radiosity/include/: macro.h
radiosity/test/: Triangle.test.cpp
rust_tracing/: Cargo.toml
rust_tracing/src/: image.rs  main.rs  ray.rs  sampler.rs  scene_object.rs  sphere.rs  triangle.rs  vector.rs
rustiosity/: Cargo.toml
rustiosity/src/: color.rs  image.rs  main.rs  patch_triangle.rs  ray.rs  triangle.rs  triangular.rs  vector.rs
