[package]
name = "rust_tracing"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]

[dependencies]
clap = "2.32"
crossbeam = "0.4"
downcast-rs = "1.0"
lazy_static = "1.2"
rand = "0.6"
rayon = "1.0"
glium = "0.22.0"
indicatif = "0.9"
image = "0.20.1"
glium_text_rusttype = "0.3.2"
